Archive2/b5/54edbb25185901/output
main.cpp: In function 'int main()':
main.cpp:10:10: error: 'void Widget::operator=(const Widget&)' is private
     void operator=(const Widget &) = delete;
          ^
main.cpp:17:14: error: within this context
         w[i] = Widget(i, i);
              ^
main.cpp:17:14: error: use of deleted function 'void Widget::operator=(const Widget&)'
main.cpp:10:10: note: declared here
     void operator=(const Widget &) = delete;
          ^
